--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,16 @@
+a {
+    text-decoration-line: none;  /* remove under line */
+}
+
 .arrow {
     display: inline-block;
     position: relative;
     padding-left: 20px;
     cursor: pointer;
-  }
-  
+}
+
 .arrow:before {
-    content: "";
+    content: '';
     border-width: 6px 6px 0 6px;
     border-style: solid;
     border-color: #000 transparent transparent transparent;
@@ -14,8 +18,8 @@
     top: 50%;
     margin-top: -6px;
     left: 0;
-  }
-  
+}
+
 .arrow:before {
     transform: rotate(180deg);
-  }
+}
